--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres
+    image: ankane/pgvector:latest 
     restart: always
     environment:
       POSTGRES_USER: user
@@ -17,9 +17,7 @@ services:
       - "8080:8080"
     depends_on:
       - db
-
     restart: unless-stopped
-
 
 volumes:
   postgres_data:
